@@ -1,6 +1,9 @@
 2005-09-03  Bas Wijnen  <shevek@fmf.nl>
 
 	* Dialog.c, main.c, multi.c: Add G_GNUC_UNUSED where appropriate.
+	* Makefile.am: Use AM_CFLAGS instead of CFLAGS.
+	* convert.c, main.c: Add include.
+	* multi.c: Check for sane input, initialise socklen_t before use.
 
 0.25 (January 14 2000): A small bug fix.
 * Removed a memory leak reported as Debian bug #50140 by Daniel Burrows.
